# pythonWeb10

./: README.md  pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/quotes/: forms.py  models.py  urls.py  utils.py  views.py
mysite/quotes/migrations/: 0001_initial.py
mysite/quotes/static/quotes/: style.css
mysite/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html
mysite/quotes/templatetags/: extract.py
mysite/users/: forms.py  urls.py  views.py
mysite/users/templates/users/: login.html  logout.html  password_reset.html  signin.html
mysite/utils/: add_quotes_to_mongo.py  migration.py
